:s added to property-list.component.html

--- a/moovsmart/src/app/components/footer/footer.component.html
+++ b/moovsmart/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="main-holder-div">
         <div class="row">
             <div class="col-6" id="mid-holder-div">
-                <p class="tag-p">Technikai segítség</p>
+                <p class="tag-p">Technikai segítség:</p>
                 <p class="tag-mail">moovsmartproject@gmail.com</p>
                 <p></p>
             </div>
