--- a/moovsmart/src/app/components/navbar/navbar.component.html
+++ b/moovsmart/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-dark navbar-expand-lg fixed-top mynav">
 
   <div class="container">
-    <a class="navbar-brand" routerLink="/"><i class="fas fa-home"></i>Moovsmart</a>
+    <a class="navbar-brand" routerLink="/"><i class="fas fa-home"></i>MoovSmart</a>
     <button aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation"
             class="navbar-toggler collapsed"
             data-target="#myNavbar" data-toggle="collapse" type="button">
