typo fixed in footer.component.html

--- a/moovsmart/src/app/components/footer/footer.component.html
+++ b/moovsmart/src/app/components/footer/footer.component.html
@@ -16,5 +16,5 @@
     </div>
 </div>
 <div id="end-div">
-    <p id="end-p">© 2020. Progmasters, MoovsmartProject. MINDEN JOG FENNTARTVA. | ADATKEZELÉSI NYILATKOZAT</p>
+    <p id="end-p">© 2020. Progmasters, MoovSmartProject. MINDEN JOG FENNTARTVA. | ADATKEZELÉSI NYILATKOZAT</p>
 </div>
