Little change in profil-list.component.html

--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -80,7 +80,7 @@
     </div>
 
     <div id="div-empty-ownlist" *ngIf="emptyList">
-        <p>Jelenleg nincs ingatlan a saját listában</p>
+        <p>Jelenleg nincs saját ingatlan</p>
     </div>
 
     <div *ngIf="propertyListItemModels.length > 0" id="pager" class="d-flex justify-content-center">
