--- a/moovsmart/src/app/components/property-details/property-details.component.html
+++ b/moovsmart/src/app/components/property-details/property-details.component.html
@@ -78,8 +78,10 @@
     </div>
     <p></p>
     <hr>
+    <div class="details">
     <p><strong>Részletes leírás:</strong></p>
     <p>{{propertyDetails?.description}}</p>
+    </div>
 
 
     <!-- Modal -->
