--- a/moovsmart/src/app/components/property-list/property-list.component.html
+++ b/moovsmart/src/app/components/property-list/property-list.component.html
@@ -147,7 +147,8 @@
             </div>
         </div>
     </div>
-    <div *ngIf="propertyListItemModels.length > 0" id="pager" class="d-flex justify-content-center">
+
+    <div *ngIf="propertyListItemModels?.length > 0" id="pager" class="d-flex justify-content-center">
         <div id="leftArrow" *ngIf="actualPageNumber > 1" (click)="pageLeft()" title="lapozz">
             <i class="fas fa-angle-left" ></i>
         </div>
