Update profil-list.component.html => comment demostration

--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -78,7 +78,8 @@
             </div>
         </div>
     </div>
-
+    
+    <!-- Comment Demostration-->
     <div id="div-empty-ownlist" *ngIf="emptyList">
         <p>Jelenleg nincs saját ingatlan</p>
     </div>
