--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -79,7 +79,7 @@
         </div>
     </div>
     
-    <!-- Comment Demostration-->
+    <!-- Comment Demostration again-->
     <div id="div-empty-ownlist" *ngIf="emptyList">
         <p>Jelenleg nincs saját ingatlan</p>
     </div>
