--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -78,8 +78,8 @@
             </div>
         </div>
     </div>
-    
-    <!-- Comment Demostration again-->
+
+  <!-- my own comment -->
     <div id="div-empty-ownlist" *ngIf="emptyList">
         <p>Jelenleg nincs saját ingatlan</p>
     </div>
