Revert "Update profil-list.component.html last"
This reverts commit 0d8b7537

--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-  
+  <!-- my own comment -->
     <div id="div-empty-ownlist" *ngIf="emptyList">
         <p>Jelenleg nincs saját ingatlan</p>
     </div>
