test- Z - L brunch commit

--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -83,6 +83,7 @@
     <div id="div-empty-ownlist" *ngIf="emptyList">
         <p>Jelenleg nincs saját ingatlan</p>
     </div>
+    <!-- adding comment from test-Zoli-L -->
 
     <div *ngIf="propertyListItemModels.length > 0" id="pager" class="d-flex justify-content-center">
         <div id="leftArrow" *ngIf="actualPageNumber > 1" (click)="pageLeft()" title="lapozz">
