--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-    <!-- new comment -->
+    <!-- new comment  To Remote-->
     <div id="div-empty-ownlist" *ngIf="emptyList">
         <p>Jelenleg nincs saját ingatlan</p>
     </div>
